# turnos_medicos

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  Dockerfile  Makefile  README.md  docker-compose-selenium.yml  docker-compose.yml  example.env  find_appointment.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup-precommit.sh
.github/workflows/: django.yml  eas-build.yml
app/: find_appointment.py  selenium_utils.py
liftoff/: asgi.py  local.py  settings.py  urls.py  wsgi.py
mobile/allende/: README.md  app.config.ts  app.json  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
sanatorio_allende/: admin.py  allende_api.py  appointments.py  apps.py  auth0_middleware.py  conftest.py  models.py  selenium_utils.py  telegram.py  test_views.py  urls.py  views.py
sanatorio_allende/data/: especialidades.json
sanatorio_allende/migrations/: 0001_initial.py  0002_alter_pacienteallende_id_paciente.py  0003_deviceregistration.py  0004_bestappointmentfound_patient_deviceregistration_user_and_more.py  0005_findappointment_desired_timeframe.py  0006_bestappointmentfound_not_interested_and_more.py  0007_bestappointmentfound_confirmed_and_more.py  0008_remove_bestappointmentfound_requisito_administrativo_and_more.py  0009_appointmenttype_id_tipo_prestacion_and_more.py  0010_remove_bestappointmentfound_hora.py  (+3 more)
terraform/: .gitignore  app.tf  backend.tf  buscar-turnos.tf  postgres.tf  project.tf  providers.tf  secrets.tf  standalone-chrome.tf
turnos/: admin.py  appointments.py  models.py  selenium_utils.py
(+48 files in other folders)
